--- a/23.md
+++ b/23.md
@@ -68,13 +68,15 @@
 #### Blog-Chain-Time 2023.10.13-19:12 in Tübingen <a id="12010"/>
 ###### Topics: Zero-Wave-Theory, Dings-Patent
 
-Because I like the Idea with the [Zero-Wave-Device](20000021.md), I now file a Draft for my very first [Dings-Patent](300000030.md):
+Because I find the [Invention](60124.md) of [Zero-Wave-Device](20000021.md) very promising, I now file a Draft for my very first [Dings-Patent](300000030.md):
 
-- [Zero-Wave-Device-Patent](300050001.md)
+- The [Zero-Wave-Device-Patent](300050001.md)!
 
-But how can I prove that this was really my Idea?
+But what could be a [Solution](600024.md) for a [Proof](600022.md), that I really have been [The-First](60134.md), who had this great [Idea](600012.md)?
 
-The Solution is a [Block-Chain](300000000.md): Because up to now I have not yet implemented my own Version, for the Time being I use the [Git-System](9000197.md), where [Check-Sums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
+- The [Block-Chain](300000000.md)!
+
+Because up to now I have not yet implemented my own Version, for the Time being I use the [Git-System](9000197.md), where [Check-Sums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
 
 My "Git-Block-Chain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-[Repository](9000050.md):
 
