--- a/23.md
+++ b/23.md
@@ -76,7 +76,7 @@ But what could be a [Solution](600024.md) for a [Proof](600022.md), that I reall
 
 - The [Block-Chain](300000000.md)!
 
-Because up to now I have not yet implemented my own Version, for the Time being I use the [Git-System](9000197.md), where [Check-Sums](13000019.md) are used to secure the different [Git-Commits](9000070.md).
+Because up to now I have not yet implemented my own Version, for the Time being I use the [Git-System](9000197.md), where [Sha1](9000196.md)-[Check-Sums](13000019.md) secure the [Consistency](600054.md) of [Git-Commits](9000070.md).
 
 My "Git-Block-Chain" can be downloaded by Everybody using with the following [Git-Clone-Command](9000086.md) to checkout the Zero-[Repository](9000050.md):
 
