--- a/12000058.md
+++ b/12000058.md
@@ -1,3 +1,3 @@
-# Hash
+# Hash (DEAD)
 
-A Hash is the [Result](60033.md) of a [Hash-Function](13000019.md).
+This Number-File is no longer maintained, [here](9000067.md) you can find its living Gemini.
