Fix Git-Tool Confusion

--- a/58.md
+++ b/58.md
@@ -1,11 +1,3 @@
-# Git
+# Git-System
 
-Git is a System to store Data with Version Information that was first published by Linus Thorwalds in the Year 2005.
-
-## Git-Ignore-File
-
-The Git-Ignore-File, normally named as ".gitignore" ...
-
-## Large-File-Support
-
-Because the [Version-Control-System](9000005.md) Git has Problems with large Files, the [Large-File-Support](15.md#Large-File-Support), also known as LFS, has been developed to fix that Problem.
+The Git-System is [Version-Control-System](9000005.md).
