--- a/9000197.md
+++ b/9000197.md
@@ -1,3 +1,3 @@
-# Git
+# Git-Tool
 
-Git is a [Version-Control-System](9000005.md).
+The Git-Tool is a [Tool](600043.md) for the [Git-System](58.md).
