--- a/9000050.md
+++ b/9000050.md
@@ -1,3 +1,3 @@
-# GIT-Repository
+# Git-Repository
 
-A GIT-Repository is ...
+A Git-Repository is a [Data-Store](60125.md) in the [Git-System](58.md).
