--- a/300050001.md
+++ b/300050001.md
@@ -10,7 +10,7 @@ If two [Waves](60156.md) with 180 Degree [Phase-Shift](10000079.md) create a [Su
 
 ![Zero-Wave](400000130.png)
 
-When the Zero-Wave is created, the Energy of the two Wave-Partners is released:
+When the Zero-Wave is created, the Energy of the two Partner-Waves is released:
 
 ![Released Energy](400000132.png)
 
