--- a/300050001.md
+++ b/300050001.md
@@ -20,7 +20,7 @@ In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](
 
 ## Invention <a id="1200"/>
 
-The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) to generate fitting [Original-Waves](10000082.md) and [Anti-Waves](10000081.md).
+The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating fitting [Original-Waves](10000082.md) and [Anti-Waves](10000081.md).
 
 For the Generation of the Waves the following Mechanisms are used:
 
@@ -28,7 +28,7 @@ For the Generation of the Waves the following Mechanisms are used:
 - Use existing Waves of the Environment and transfrom them into fitting Wave-Pairs
 - Artificially create the complete Wave-Pair
 
-The third Point is visualized in the following Drawing:
+The third Method is visualized in the following Drawing:
 
 ![Create Wave-Pair](400000131.png)
 
@@ -50,11 +50,8 @@ Depending on the Results of the [Zero-Wave-Theory](301000002.md) the main [Use-C
 ### Other Benefits <a id="1420"/>
 
 - Reduce [Noise-Polition](400000001.md) with [Anti-Sound](10000066.md)
-- Create Shadowing with [Anti-Waves](10000081.md) for [Light](10000012.md).
-
-### Other possible Benefits <a id="1430"/>
-
-- Solve [Global-Warming](400000002.md).
+- Reduce [Light-Polition](400000004.md) with [Anti-Light](10000087.md)
+- Solve the [Global-Warming](400000002.md) Problem.
 
 ## Further Reading <a id="1500"/>
 
