--- a/300050001.md
+++ b/300050001.md
@@ -49,8 +49,8 @@ Depending on the Results of the [Zero-Wave-Theory](301000002.md) the main [Use-C
 
 ### Other Benefits <a id="1420"/>
 
-- Reduce [Noise-Polition](400000001.md) with [Anti-Sound](10000066.md)
-- Reduce [Light-Polition](400000004.md) with [Anti-Light](10000087.md)
+- Reduce [Noise-Pollution](400000001.md) with [Anti-Sound](10000066.md)
+- Reduce [Light-Pollution](400000004.md) with [Anti-Light](10000087.md)
 - Solve the [Global-Warming](400000002.md) Problem.
 
 ## Further Reading <a id="1500"/>
