--- a/300050001.md
+++ b/300050001.md
@@ -6,11 +6,11 @@ Status: <font color="red">Draft</font>
 
 ## Theory <a id="1100"/>
 
-If two [Waves](60156.md) with 180 Degree [Phase-Shift](10000079.md) create a [Superposition](10000065.md), the [Result](60033.md) is a [Zero-Wave](10000061.md):
+When two [Waves](60156.md) with 180 Degree [Phase-Shift](10000079.md) create a [Superposition](10000065.md), the [Result](60033.md) is a [Zero-Wave](10000061.md):
 
 ![Zero-Wave](400000130.png)
 
-When the Zero-Wave is created, the Energy of the two Partner-Waves is released:
+While the Zero-Wave is created, the Energy of the two Partner-Waves is released:
 
 ![Released Energy](400000132.png)
 
@@ -20,9 +20,7 @@ In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](
 
 ## Invention <a id="1200"/>
 
-The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating fitting [Original-Waves](10000082.md) and [Anti-Waves](10000081.md).
-
-For the Generation of the Waves the following Mechanisms are used:
+The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating fitting [Original-Waves](10000082.md) and [Anti-Waves](10000081.md) by applying the following Mechanisms:
 
 - Use existing Waves of the Environment and artificially create fitting Anti-Waves for them
 - Use existing Waves of the Environment and transfrom them into fitting Wave-Pairs
