--- a/300050001.md
+++ b/300050001.md
@@ -43,7 +43,7 @@ For this Invention all Kind of Waves can be used, for Example:
 
 ### Main Use-Case <a id="1410"/>
 
-Depending on the Results of the [Zero-Wave-Theory](301000002.md) the main [Use-Case](600163.md) for the [Zero-Wave-Device](20000021.md) is [Heating](10000072.md) or [Cooling](10000073.md).
+The main [Use-Case](600163.md) for the [Zero-Wave-Device](20000021.md) is [Heating](10000072.md) or [Cooling](10000073.md).
 
 ### Other Benefits <a id="1420"/>
 
