--- a/23.md
+++ b/23.md
@@ -65,6 +65,15 @@
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
+#### Blog-Chain-Time 2023.10.15-15:25 on a Smoking-Round <a id="12011"/>
+###### Topics: Zero-Wave-Theory
+
+I meet Prof. Dr. [Reinhard](70000066.md) again and ask him, if he now has some [Time](10000002.md) for a short [Conversation](40202001.md). Unfortunately he currently has a [Problem](600029.md) with his [Voice](60096.md) and therefore refuses to talk.
+
+After I mention, that I might have a [Solution](600024.md) for his [Problem](600029.md), he responds with some [Anger](10000056.md), that it is not [him](70000066.md), but instead it is [me](0.md), who has a [Problem](600029.md).
+
+Not sure, if that [Statement](600078.md) is related to my [Zero-Wave-Theory](301000002.md) or perhaps meant in a somehow broader [Context](600034.md).
+
 #### Blog-Chain-Time 2023.10.13-19:12 in Tübingen <a id="12010"/>
 ###### Topics: Zero-Wave-Theory, Dings-Patent
 
