--- a/23.md
+++ b/23.md
@@ -68,7 +68,7 @@
 #### Blog-Chain-Time 2023.10.15-15:25 on a Smoking-Round <a id="12011"/>
 ###### Topics: Zero-Wave-Theory
 
-I meet Prof. Dr. [Reinhard](70000066.md) again and ask him, if he now has some [Time](10000002.md) for a short [Conversation](40202001.md). Unfortunately he currently has a [Problem](600029.md) with his [Voice](60096.md) and therefore refuses to talk.
+I meet Prof. Dr. [Reinhard](70000066.md) again and ask him, if he now has some [Time](10000002.md) for a short [Conversation](40202001.md). Unfortunately he currently seems to have a [Problem](600029.md) with his [Voice](60096.md) and therefore refuses to talk.
 
 After I mention, that I might have a [Solution](600024.md) for his [Problem](600029.md), he responds with some [Anger](10000056.md), that it is not [him](70000066.md), but instead it is [me](0.md), who has a [Problem](600029.md).
 
