--- a/1971093000.md
+++ b/1971093000.md
@@ -4,6 +4,8 @@ The Zero-Wave-Theory-Topic is a [Dings-Topic](300000031.md) for the [Zero-Wave-T
 
 ## Entries
 
+- [Project/Theory vs. Reality](23.md#12011)
+- [Project/Theory vs. Reality](23.md#12010)
 - [Project/Theory vs. Reality](23.md#12008)
 - [Project/Theory vs. Reality](23.md#12007)
 - [Project/Theory vs. Reality](23.md#12001)
