--- a/290000000.md
+++ b/290000000.md
@@ -1,3 +1,3 @@
 # Environment-Pollution
 
-Environment-Pollution is ...
+Environment-Pollution is [Pollution](600169.md) of an [Environment](620006.md).
