--- a/300050001.md
+++ b/300050001.md
@@ -20,15 +20,29 @@ In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](
 
 ## Invention <a id="1200"/>
 
-The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating fitting [Original-Waves](10000082.md) and [Anti-Waves](10000081.md) by applying the following Mechanisms:
+The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Original-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have three different Modes:
 
-- Use existing Waves of the Environment and artificially create fitting Anti-Waves for them
-- Use existing Waves of the Environment and transfrom them into fitting Wave-Pairs
-- Artificially create the complete Wave-Pair
+- Stand-Alone-Mode
+- Add-On-Mode
+- Modulation-Mode
 
-The third Method is visualized in the following Drawing:
+### Stand-Alone-Mode
+
+Both, the [Original-Wave](10000082.md) and [Anti-Wave](10000081.md) is created by the Device:
 
 ![Create Wave-Pair](400000131.png)
+
+### Add-On-Mode
+
+Artificial [Anti-Waves](10000081.md) are created for already existing [Environment-Waves](301000003.md):
+
+![Anti-Wave with Environment-Wave](400000133.png)
+
+### Modulation-Mode
+
+Use two [Environment-Waves](301000003.md) and perform a [Transformation](600164.md) into fitting Wave-Pairs using [Frequency-Modulation](10000089.md):
+
+![Anti-Wave with Modulation](400000134.png)
 
 ## Wave-Forms <a id="1300"/>
 
