--- a/300050001.md
+++ b/300050001.md
@@ -26,19 +26,19 @@ The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating 
 - Add-On-Mode
 - Modulation-Mode
 
-### Stand-Alone-Mode
+### Stand-Alone-Mode <a id="1201"/>
 
 Both, the [Original-Wave](10000082.md) and [Anti-Wave](10000081.md) is created by the Device:
 
 ![Create Wave-Pair](400000131.png)
 
-### Add-On-Mode
+### Add-On-Mode <a id="1202"/>
 
 Artificial [Anti-Waves](10000081.md) are created for already existing [Environment-Waves](301000003.md):
 
 ![Anti-Wave with Environment-Wave](400000133.png)
 
-### Modulation-Mode
+### Modulation-Mode <a id="1203"/>
 
 Use two [Environment-Waves](301000003.md) and perform a [Transformation](600164.md) into fitting Wave-Pairs using [Frequency-Modulation](10000089.md):
 
