Add missing Dots

--- a/300050001.md
+++ b/300050001.md
@@ -61,8 +61,8 @@ The main [Use-Case](600163.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 
 ### Other Benefits <a id="1420"/>
 
-- Reduce [Noise-Pollution](290000001.md) with [Anti-Sound](10000066.md)
-- Reduce [Light-Pollution](290000003.md) with [Anti-Light](10000087.md)
+- Reduce [Noise-Pollution](290000001.md) with [Anti-Sound](10000066.md).
+- Reduce [Light-Pollution](290000003.md) with [Anti-Light](10000087.md).
 - Solve the [Global-Warming](290000002.md) Problem.
 
 ## Further Reading <a id="1500"/>
