--- a/13006002.md
+++ b/13006002.md
@@ -1,3 +1,3 @@
 # Geometric-Shape
 
-A Geometric-Shape is a [Closed-Location-Path](620008.md) in a [Geometric-System](404.md).
+A Geometric-Shape is a [Closed-Location-Path](620008.md) in a [Geometric-System](13006003.md).
