--- a/13006001.md
+++ b/13006001.md
@@ -1,3 +1,3 @@
-# Rotation
+# Rotation-Position
 
-A Rotation is [Measure](10000021.md) for the [Location](620002.md) on a [Circle-Path](620009.md).
+A Rotation-Position is [Measure](10000021.md) for the [Location](620002.md) on a [Circle-Path](620009.md).
