--- a/12000059.md
+++ b/12000059.md
@@ -1,3 +1,3 @@
 # Mathematics-Angle
 
-A Mathematics-Angle is a [Measure](10000021.md) for a [Rotation](13006001.md).
+A Mathematics-Angle is a [Measure](10000021.md) for a [Circle-Path-Position](13006001.md).
