--- a/13000006.md
+++ b/13000006.md
@@ -1,3 +1,3 @@
 # Mathematics-Angle-Degree
 
-A Mathematics-Angle-Degree is ...
+A Mathematics-Angle-Degree is [Unit](10000020.md) for a [Mathematics-Angle](12000059.md).
