Make it simpler

--- a/300050001.md
+++ b/300050001.md
@@ -40,7 +40,7 @@ Artificial [Anti-Waves](10000081.md) are created for already existing [Environme
 
 ### Modulation-Mode <a id="1203"/>
 
-Use two [Environment-Waves](301000003.md) and perform a [Transformation](600164.md) into fitting Wave-Pairs using [Frequency-Modulation](10000089.md):
+Use two [Environment-Waves](301000003.md) and perform a [Transformation](600164.md) into fitting Wave-Pairs using [Frequency-Modulation](10000089.md), [Phase-Modulation](10000092.md) and [Amplitude-Modulation](10000090.md):
 
 ![Anti-Wave with Modulation](400000134.png)
 
@@ -48,7 +48,7 @@ Use two [Environment-Waves](301000003.md) and perform a [Transformation](600164.
 
 For this Invention all Kind of Waves can be used, for Example:
 
-- [Electro-Magnetic-Waves](10000012.md)
+- [Light-Waves](10000012.md)
 - [Sound-Waves](40200001.md)
 - [Water-Waves](10000084.md)
 - [Wind-Waves](10000083.md)
