--- a/300050001.md
+++ b/300050001.md
@@ -1,8 +1,12 @@
 # Zero-Wave-Device-Patent <a id="1000"/>
 
-The Zero-Wave-Device-Patent is a [Dings-Patent](300000030.md) of [Michael_Holzheu](0.md) for a [Zero-Wave-Device](20000021.md).
+The Zero-Wave-Device-Patent is a [Dings-Patent](300000030.md) of [Michael_Holzheu](0.md).
 
 Status: <font color="red">Draft</font>
+
+## Abstract <a id="1600"/>
+
+This Patent describes the [Zero-Wave-Device](20000021.md), that is able to generate [Heating](10000072.md) or [Cooling](10000073.md) by using all Kinds of [Waves](60156.md).
 
 ## Theory <a id="1100"/>
 
