Make it more scientific

--- a/10000072.md
+++ b/10000072.md
@@ -1,3 +1,3 @@
 # Heating-Process
 
-A Heating-Process is a [Physical-Process](10000042.md) for the [Transformation](600164.md) of a [Thing](60003.md) into [Heat-Energy](10000070.md).
+A Heating-Process is a [Physical-Process](10000042.md) for the [Transformation](600164.md) of a [Thing](60003.md) into [Thermal-Energy](10000070.md).
