--- a/300050001.md
+++ b/300050001.md
@@ -38,7 +38,7 @@ Both, the [Original-Wave](10000082.md) and [Anti-Wave](10000081.md) is created b
 
 ### Add-On-Mode <a id="1202"/>
 
-Artificial [Anti-Waves](10000081.md) are created for already existing [Environment-Waves](301000003.md):
+An artificial [Anti-Wave](10000081.md) is created for an already existing [Environment-Wave](301000003.md):
 
 ![Anti-Wave with Environment-Wave](400000133.png)
 
