--- a/10000012.md
+++ b/10000012.md
@@ -1,3 +1,3 @@
 # Electro-Magnetic-Wave
 
-An Electro-Magnetic-Wave is ...
+An Electro-Magnetic-Wave is [Vibration](600084.md) of [Ether](600018.md).
