Rename Original-Wave -> Pro-Wave

--- a/300050001.md
+++ b/300050001.md
@@ -24,7 +24,7 @@ In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](
 
 ## Invention <a id="1200"/>
 
-The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Original-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have three different Modes:
+The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Pro-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have three different Modes:
 
 - Stand-Alone-Mode
 - Add-On-Mode
@@ -32,7 +32,7 @@ The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating 
 
 ### Stand-Alone-Mode <a id="1201"/>
 
-Both, the [Original-Wave](10000082.md) and [Anti-Wave](10000081.md) is created by the Device:
+Both, the [Pro-Wave](10000082.md) and [Anti-Wave](10000081.md) is created by the Device:
 
 ![Create Wave-Pair](400000131.png)
 
