--- a/10000082.md
+++ b/10000082.md
@@ -1,3 +1,3 @@
-# Original-Wave
+# Pro-Wave
 
-An Original-Wave is the [Opposite](60103.md) of an [Anti-Wave](10000081.md).
+An Pro-Wave is the [Opposite](60103.md) of an [Anti-Wave](10000081.md).
