--- a/10000079.md
+++ b/10000079.md
@@ -1,3 +1,3 @@
 # Wave-Phase-Shift
 
-A Wave-Phase-Shift is a [Measure](10000021.md) for the [Difference](13000027.md) of the [Start-Location](620004.md) of two [Waves](60156.md).
+A Wave-Phase-Shift is the [Difference](13000027.md) of two [Wave-Phases](10000091.md).
