--- a/10000091.md
+++ b/10000091.md
@@ -1,3 +1,3 @@
-# Wave-Phase
+# Wave-Start-Location
 
-A Wave-Phase is the [Phase](60158.md) of a [Wave](60156.md).
+A Wave-Start-Location is a [Pattern-Start-Location](60158.md) for a [Wave](60156.md).
