--- a/10000010.md
+++ b/10000010.md
@@ -1,3 +1,3 @@
 # Phase-Angle
 
-A Phase-Angle is an [Angle](12000059.md) of a [Wave](60156.md).
+A Phase-Angle is an [Angle](12000059.md) in [Sinus-Wave](10000093.md).
