--- a/10000011.md
+++ b/10000011.md
@@ -1,3 +1,3 @@
 # Phase-Angle-Shift
 
-A Phase-Angle-Shift is ...
+This Number-File is no longer maintained, [here](10000079.md) you can find its living Gemini.
