--- a/23.md
+++ b/23.md
@@ -75,7 +75,7 @@ After I mention, that I might have a [Solution](600024.md) for his [Problem](600
 Not sure, if that [Statement](600078.md) is related to my [Zero-Wave-Theory](301000002.md) or perhaps meant in a somehow broader [Context](600034.md).
 
 #### Blog-Chain-Time 2023.10.13-19:12 in Tübingen <a id="12010"/>
-###### Topics: Zero-Wave-Theory, Dings-Patent
+###### Topics: Zero-Wave-Theory, Zero-Wave-Device-Patent
 
 Because I find the [Invention](60124.md) of [Zero-Wave-Device](20000021.md) very promising, I now file a Draft for my very first [Dings-Patent](300000030.md):
 
