--- a/100300005.md
+++ b/100300005.md
@@ -1,3 +1,3 @@
 # Lucky-Strike
 
-Lucky-Strike is a [Trade-Mark](404.md) for [Cigarettes](100100002.md).
+Lucky-Strike is a [Trade-Mark](130000034.md) for [Cigarettes](100100002.md).
