--- a/23.md
+++ b/23.md
@@ -66,17 +66,15 @@
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
 #### Blog-Chain-Time 2023.10.16-04:30 in Tübingen <a id="12012"/>
-###### Topics: Zero-Wave-Device-Patent
+###### Topics: Zero-Wave-Device-Patent, Nicole
 
 While working out the Description for my [Zero-Wave-Device-Patent](300050001.md), I define a lot of new [Concepts](600011.md) around the [Wave-Theory](10000094.md).
 
 I have long bared my Teeth at the Term [Phase](10000091.md) and first got even more confused by a [Tip](600168.md) of a funny [Flamenco](270300004.md)-Dancer from [Málaga](140000066.md), until I finally got it.
 
-Some Time later on a Smoking-Round I was thinking again on my [Nicole](1997080300.md) and exactly at the Time, I see the the decisive [Hint](600168.md).
+A little bit later on a Smoking-Round I was thinking again on my [Nicole](1997080300.md) and almost like a [Miracle](14300003.md), exactly at that Time I discover the decisive [Hint](600168.md) at the [Bus-Station](1100200002.md).
 
-Really great Team-Work, my dear Friends and sleep well:
-
-
+![Sleep well, Nicole!](400000135.md)
 
 #### Blog-Chain-Time 2023.10.15-15:25 on a Smoking-Round <a id="12011"/>
 ###### Topics: Zero-Wave-Theory
