--- a/23.md
+++ b/23.md
@@ -74,7 +74,7 @@ I have long bared my Teeth at the Term [Phase](10000091.md) and first got even m
 
 A little bit later on a Smoking-Round I was thinking again on my [Nicole](1997080300.md) and almost like a [Miracle](14300003.md), exactly at that Time I discover the decisive [Hint](600168.md) at the [Bus-Station](1100200002.md).
 
-![Sleep well, Nicole!](400000135.md)
+![Sleep well, Nicole!](400000135.jpg)
 
 #### Blog-Chain-Time 2023.10.15-15:25 on a Smoking-Round <a id="12011"/>
 ###### Topics: Zero-Wave-Theory
