--- a/150000000.md
+++ b/150000000.md
@@ -1,3 +1,3 @@
 # Real-Human
 
-A Real-Human is a [Human](40000001.md) in [Realtiy](40000.md).
+A Real-Human is a [Human-Man](40000001.md) in [Realtiy](40000.md).
