--- a/23.md
+++ b/23.md
@@ -70,7 +70,7 @@
 
 While working out the Description for my [Zero-Wave-Device-Patent](300050001.md), I define a lot of new [Concepts](600011.md) around the [Wave-Theory](10000094.md).
 
-I have long bared my Teeth at the Term [Phase](10000091.md) and first got even more confused by a [Tip](600168.md) from my funny [Sara](151000000.md), until I finally figure it out.
+I have long bared my Teeth at the Term [Phase](10000091.md) and first got even more confused by a [Tip](600168.md) from the funny [Sara](151000000.md), until I finally figure it out.
 
 A little bit later on a Smoking-Round I was thinking again on my [Nicole](1997080300.md) and almost like a [Miracle](14300003.md), exactly at that Time I discover the decisive [Hint](600168.md) at the [Bus-Station](1100200002.md).
 
