--- a/23.md
+++ b/23.md
@@ -70,11 +70,13 @@
 
 While working out the Description for my [Zero-Wave-Device-Patent](300050001.md), I define a lot of new [Concepts](600011.md) around the [Wave-Theory](10000094.md).
 
-I have long bared my Teeth at the Term [Phase](10000091.md) and first got even more confused by a [Tip](600168.md) from the funny [Sara](151000000.md), until I finally figure it out.
+I have long bared my Teeth at the Term [Phase](10000091.md) and first get even more confused by a [Tip](600168.md) from the funny [Sara](151000000.md).
 
-A little bit later on a Smoking-Round I was thinking again on my [Nicole](1997080300.md) and almost like a [Miracle](14300003.md), exactly at that Time at the [Bus-Station](1100200002.md) from our [Line-17](2010032.md) I discover the decisive [Hint](600168.md):
+A little bit later, on a Smoking-Round I must think again on my [Nicole](1997080300.md) and ask via WhatsApp, if Everything is Ok. She responds, that I woke her up, because she forgot to switch off the Smart-Phone.
 
-![Help from sleeping Woman](400000135.jpg)
+Almost exactly at that Time at the [Bus-Station](1100200002.md) for our [Line-Seventeen](2010032.md) I get the decisive Inspiration for my Phase-Problem:
+
+![Sleep well, Nicole!](400000135.jpg)
 
 #### Blog-Chain-Time 2023.10.15-15:25 on a Smoking-Round <a id="12011"/>
 ###### Topics: Zero-Wave-Theory
