--- a/23.md
+++ b/23.md
@@ -74,7 +74,7 @@ I have long bared my Teeth at the Term [Phase](10000091.md) and first get even m
 
 A little bit later, on a Smoking-Round I must think again on my [Nicole](1997080300.md) and ask via WhatsApp, if Everything is Ok. She responds, that I woke her up, because she forgot to switch off the Smart-Phone.
 
-Almost exactly at that Time at the [Bus-Station](1100200002.md) for our [Line-Seventeen](2010032.md) I get the decisive Inspiration for my Phase-Problem:
+Almost exactly at that Time in the [Bus-Station](1100200002.md) for our [Line-Seventeen](2010032.md) I get the decisive Inspiration for my Phase-Problem:
 
 ![Sleep well, Nicole!](400000135.jpg)
 
