--- a/23.md
+++ b/23.md
@@ -70,7 +70,7 @@
 
 While working out the Description for my [Zero-Wave-Device-Patent](300050001.md), I define a lot of new [Concepts](600011.md) around the [Wave-Theory](10000094.md).
 
-I have long bared my Teeth at the Term [Phase](10000091.md) and first get even more confused by a [Tip](600168.md) from the funny [Sara](151000000.md).
+I have long bared my Teeth at the Term [Phase](10000091.md) and then first get even more confused by a [Tip](600168.md) from the funny [Sara](151000000.md).
 
 A little bit later, on a Smoking-Round I must think again on my [Nicole](1997080300.md) and ask via WhatsApp, if Everything is Ok. She responds, that I woke her up, because she forgot to switch off the Smart-Phone.
 
