Add Comma and improve Wording

--- a/23.md
+++ b/23.md
@@ -72,9 +72,9 @@ While working out the Description for my [Zero-Wave-Device-Patent](300050001.md)
 
 I have long bared my Teeth at the Term [Phase](10000091.md) and then first get even more confused by a [Tip](600168.md) from the funny [Sara](151000000.md).
 
-A little bit later, on a Smoking-Round I must think again on my [Nicole](1997080300.md) and ask via WhatsApp, if Everything is Ok. She responds, that I woke her up, because she forgot to switch off the Smart-Phone.
+A little bit later, on a Smoking-Round, I must think again on my [Nicole](1997080300.md) and ask via WhatsApp, if Everything is Ok. She responds, that I woke her up, because she forgot to switch off the Smart-Phone.
 
-Almost exactly at that Time in the [Bus-Station](1100200002.md) for our [Line-Seventeen](2010032.md) I get the decisive Inspiration for my Phase-Problem:
+Almost exactly at that Time in the [Bus-Station](1100200002.md) for our [Line-Seventeen](2010032.md), I then get the decisive Inspiration for my Phase-Problem:
 
 ![Sleep well, Nicole!](400000135.jpg)
 
