--- a/60098.md
+++ b/60098.md
@@ -1,3 +1,3 @@
 # Vocal
 
-A Vocal is [Voice](60096.md) with [Harmony](60100.md) and [Rythm](60099.md).
+A Vocal is [Voice](60096.md) with [Harmony](60100.md) and [Rhythm](60099.md).
