--- a/300050001.md
+++ b/300050001.md
@@ -22,6 +22,14 @@ Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [
 
 In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](10000073.md) is the [Result](60033.md).
 
+Besides the already mentioned [Zero-Energy](10000071.md), where perhaps never a [Measurement](10000022.md) could be found, there is another [Hypothesis](600028.md), which could save the [Engergy-Convervation-Law](10000017.md):
+
+- The [Wave-Engergy](10000080.md) is tunneld into a [Parallel-Universe](10000075.md).
+
+For a [Proove](600022.md) of this [Theory](10000060.md), we could use [Zero-Wave-Devices](20000021.md) to setup a [Communication](60061.md) with the [Aliens](40000031.md), who might live there.
+
+There is already one known Case, where the [Engergy-Convervation-Law](10000017.md) is already violated, namely [Quantum-Fluctuations](10000096.md). If we can find there [Patterns](60112.md), that cannot be explained by [Stochastics](13005001.md), perhaps already [Living-Beings](40000016.md) are using [Zero-Wave-Devices](20000021.md), or even try to setup a [Communication](60061.md) with us.
+
 ## Invention <a id="1200"/>
 
 The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Pro-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have three different Modes:
@@ -68,6 +76,10 @@ The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 - Reduce [Noise-Pollution](290000001.md) with [Anti-Sound](10000066.md).
 - Reduce [Light-Pollution](290000003.md) with [Anti-Light](10000087.md).
 - Solve the [Global-Warming](290000002.md) Problem.
+
+### Further Use-Cases <a id="1430"/>
+
+- Establish [Communication](60061.md) with [Parallel-Universes](10000075.md).
 
 ## Further Reading <a id="1500"/>
 
