--- a/60099.md
+++ b/60099.md
@@ -1,3 +1,3 @@
-# Rythm
+# Rhythm
 
-A Rythm is a slow Time-[Structure](60011.md) in [Perception](60097.md).
+A Rhythm is a slow Time-[Structure](60011.md) in [Perception](60097.md).
