--- a/60100.md
+++ b/60100.md
@@ -1,3 +1,3 @@
 # Harmony
 
-A Rythm is a fast Time-[Structure](60011.md) in [Perception](60097.md).
+A Harmony is a fast Time-[Structure](60011.md) in [Perception](60097.md).
