Add Parallel-Universe Story

--- a/300050001.md
+++ b/300050001.md
@@ -22,13 +22,15 @@ Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [
 
 In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](10000073.md) is the [Result](60033.md).
 
-Besides the already mentioned [Zero-Energy](10000071.md), where perhaps never a [Measurement](10000022.md) could be found, there is another [Hypothesis](600028.md), which could save the [Engergy-Convervation-Law](10000017.md):
+Besides the [Zero-Energy](10000071.md) for that perhaps never a [Proof](10000022.md) can be found, there is another [Hypothesis](600028.md), which could save the [Engergy-Convervation-Law](10000017.md):
 
-- The [Wave-Engergy](10000080.md) is tunneld into a [Parallel-Universe](10000075.md).
+- The [Wave-Engergy](10000080.md) is tunneled into a [Parallel-Universe](10000075.md).
 
-For a [Proove](600022.md) of this [Theory](10000060.md), we could use [Zero-Wave-Devices](20000021.md) to setup a [Communication](60061.md) with the [Aliens](40000031.md), who might live there.
+For a [Proof](600022.md) of this [Theory](10000060.md), we could use [Zero-Wave-Devices](20000021.md) to setup a [Communication](60061.md) with the [Aliens](40000031.md), who might live there.
 
-There is already one known Case, where the [Engergy-Convervation-Law](10000017.md) is already violated, namely [Quantum-Fluctuations](10000096.md). If we can find there [Patterns](60112.md), that cannot be explained by [Stochastics](13005001.md), perhaps already [Living-Beings](40000016.md) are using [Zero-Wave-Devices](20000021.md), or even try to setup a [Communication](60061.md) with us.
+One Method could be to send a simple [Pattern](60112.md) like a [Walz-Rhythm](90000041.md) by generating three [Wave-Periods](404.md), where the first Period has a higher [Amplitude](10000015.md) than the following Two.
+
+There is at least one known Case, where the [Engergy-Convervation-Law](10000017.md) is already violated, namely [Quantum-Fluctuations](10000096.md). If we can find [Patterns](60112.md) in these Fluctuations, that cannot be explained by [Stochastics](13005001.md), perhaps our [Neigbours](180000012.md) are using [Zero-Wave-Devices](20000021.md) for the main Use-Case, or even try to setup a [Communication](60061.md) with us.
 
 ## Invention <a id="1200"/>
 
