--- a/300050001.md
+++ b/300050001.md
@@ -28,8 +28,6 @@ Besides the [Zero-Energy](10000071.md) for that perhaps never a [Proof](10000022
 
 For a [Proof](600022.md) of this [Theory](10000060.md), we could use [Zero-Wave-Devices](20000021.md) to setup a [Communication](60061.md) with the [Aliens](40000031.md), who might live there.
 
-One Method could be to send a simple [Pattern](60112.md) like a [Walz-Rhythm](90000041.md) by generating three [Wave-Periods](404.md), where the first Period has a higher [Amplitude](10000015.md) than the following Two.
-
 There is at least one known Case, where the [Engergy-Convervation-Law](10000017.md) is already violated, namely [Quantum-Fluctuations](10000096.md). If we can find [Patterns](60112.md) in these Fluctuations, that cannot be explained by [Stochastics](13005001.md), perhaps our [Neigbours](180000012.md) are using [Zero-Wave-Devices](20000021.md) for the main Use-Case, or even try to setup a [Communication](60061.md) with us.
 
 ## Invention <a id="1200"/>
@@ -39,6 +37,7 @@ The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating 
 - Stand-Alone-Mode
 - Add-On-Mode
 - Modulation-Mode
+- Communication-Mode
 
 ### Stand-Alone-Mode <a id="1201"/>
 
@@ -57,6 +56,12 @@ An artificial [Anti-Wave](10000081.md) is created for an already existing [Envir
 Use two [Environment-Waves](301000003.md) and perform a [Transformation](600164.md) into fitting Wave-Pairs using [Frequency-Modulation](10000089.md), [Phase-Modulation](10000092.md) and [Amplitude-Modulation](10000090.md):
 
 ![Anti-Wave with Modulation](400000134.png)
+
+### Communication-Mode <a id="1204"/>
+
+For [Communication](60061.md) with [Parallel-Universes](10000075.md) the Device is able to generate all Kinds of [Patterns](60112.md), for Example three [Wave-Periods](404.md), where the first One has a higher [Amplitude](10000015.md) than the following Two:
+
+![Communication between Universes](400000137.png)
 
 ## Wave-Forms <a id="1300"/>
 
