--- a/300050001.md
+++ b/300050001.md
@@ -22,13 +22,13 @@ Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [
 
 In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](10000073.md) is the [Result](60033.md).
 
-Besides the [Zero-Energy](10000071.md) for that perhaps never a [Proof](10000022.md) can be found, there is another [Hypothesis](600028.md), which could save the [Engergy-Convervation-Law](10000017.md):
+There is at least one accepted Case, where the [Engergy-Convervation-Law](10000017.md) seems to be (at least temporarily) violated, namely [Quantum-Fluctuations](10000096.md).
+
+But the [Zero-Wave-Theory](301000002.md) could also explain this [Problem](600029.md) by a third [Hypothesis](600028.md):
 
 - The [Wave-Engergy](10000080.md) is tunneled into a [Parallel-Universe](10000075.md).
 
-For a [Proof](600022.md) of this [Theory](10000060.md), we could use [Zero-Wave-Devices](20000021.md) to setup a [Communication](60061.md) with the [Aliens](40000031.md), who might live there.
-
-There is at least one known Case, where the [Engergy-Convervation-Law](10000017.md) is already violated, namely [Quantum-Fluctuations](10000096.md). If we can find [Patterns](60112.md) in these Fluctuations, that cannot be explained by [Stochastics](13005001.md), perhaps our [Neigbours](180000012.md) are using [Zero-Wave-Devices](20000021.md) for the main Use-Case, or even try to setup a [Communication](60061.md) with us.
+If that Theory is correct, the [Zero-Wave-Device](20000021.md) can also be used for [Communication](60061.md) with [Parallel-Universes](10000075.md) and in case there live more developed [Living-Beings](40000016.md), who already developed such a Device, it might be worth to search for [Patterns](60112.md) in [Quantum-Fluctuations](10000096.md), that cannot be explained by simple [Stochastics](13005001.md).
 
 ## Invention <a id="1200"/>
 
