--- a/300050001.md
+++ b/300050001.md
@@ -18,17 +18,20 @@ While the Zero-Wave is created, the Energy of the two Partner-Waves is released:
 
 ![Released Energy](400000132.png)
 
-Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [Transformation](600164.md) of the released [Wave-Energy](10000080.md) is carried out either into [Thermal-Energy](10000070.md) or [Zero-Energy](10000071.md).
+Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [Transformation](600164.md) of the released [Wave-Energy](10000080.md) is carried out into two possible Froms of Energy:
 
-In the former Case [Heating](10000072.md) is generated, in the Latter [Cooling](10000073.md) is the [Result](60033.md).
+- The [Wave-Energy](10000080.md) is transformed into [Thermal-Energy](10000070.md), where a [Measurement](10000022.md) is possible by Means of already known [Physics](10000000.md).
+- The [Wave-Energy](10000080.md) is transformed into [Zero-Energy](10000071.md), where [Invention](60124.md) is required for [Measurement](10000022.md) of this [New-Thing](60131.md).
 
-There is at least one accepted Case, where the [Energy-Convervation-Law](10000017.md) seems to be (at least temporarily) violated, namely [Quantum-Fluctuations](10000096.md).
+In the former Case [Heating](10000072.md) is generated in [Our-Universe](10000074.md), in the Latter [Cooling](10000073.md) is the [Result](60033.md).
 
-But the [Zero-Wave-Theory](301000002.md) could also explain this [Problem](600029.md) by a third [Hypothesis](600028.md):
+There is at least one accepted Case, where the [Energy-Convervation-Law](10000017.md) seems to be (at least temporarily) violated, namely [Quantum-Fluctuations](10000096.md). The [Zero-Wave-Theory](301000002.md) can explain this [Observation](10000036.md) by a third [Hypothesis](600028.md):
 
 - The [Wave-Energy](10000080.md) is tunneled into a [Parallel-Universe](10000075.md).
 
 If that Theory is correct, the [Zero-Wave-Device](20000021.md) can also be used for [Communication](60061.md) with [Parallel-Universes](10000075.md) and in case there live more developed [Living-Beings](40000016.md), who already developed such a Device, it might be worth to search for [Patterns](60112.md) in [Quantum-Fluctuations](10000096.md), that cannot be explained by simple [Stochastics](13005001.md).
+
+For the third Possibility [Cooling](10000073.md) will be generated in [Our-Universe](10000074.md) and in the [Parallel-Universes](10000075.md) most likely [Heating](10000072.md) will be generated.
 
 ## Invention <a id="1200"/>
 
