--- a/300050001.md
+++ b/300050001.md
@@ -35,7 +35,7 @@ For the third Possibility [Cooling](10000073.md) will be generated in [Our-Unive
 
 ## Invention <a id="1200"/>
 
-The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Pro-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have three different Modes:
+The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Pro-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have four different Modes:
 
 - Stand-Alone-Mode
 - Add-On-Mode
