--- a/23.md
+++ b/23.md
@@ -65,6 +65,17 @@
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
+#### Blog-Chain-Time 2023.10.16-19:45 in Tübingen <a id="12013"/>
+###### Topics: Zero-Wave-Device-Patent, Woman
+
+On our regular [TüDoKop](2010026.md)-Round I report about [My-Patent](300050001.md) and my [Plan](600045.md) of using a [Block-Chain](300000000.md) to prevent [Stealing](670013.md) of the [Idea](600012.md).
+
+After my [Friends](180000010.md) give me the [Advice](600150.md) not to be so naive and better pay for a [Patent-Lawyer](202000021.md), I respond that [Konrad_Zuse](70000045.md) should have said [[3]](#12053), that these Humans are the only Ones, who earn [Money](6666.md) with [Patents](670022.md).
+
+But also [Mandy](151000001.md) teaches me a little bit later, that I have to be better careful with sensitive Things:
+
+![Thanks, little Girl!]
+
 #### Blog-Chain-Time 2023.10.16-04:30 in Tübingen <a id="12012"/>
 ###### Topics: Zero-Wave-Device-Patent, Nicole
 
@@ -448,6 +459,7 @@ Perhaps this [Idea](600012.md) is good enough for him and we can win together ye
 [<a id="12050"/>0] [Beginnings of Zero-Wave-Theory](21.md#1804) \
 [<a id="12051"/>1] [Pythagorean-Comma](#10102) \
 [<a id="12052"/>2] [Electro-Magnetic-Transformation](21.md#1804)
+[<a id="12053"/>3] [https://youtu.be](https://youtu.be/jhasuoNy_Pk&t=2m4s)
 
 ## Day-109: The Don't-Waste-App <a id="10900"/>
 
