--- a/300050001.md
+++ b/300050001.md
@@ -93,4 +93,5 @@ The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 
 ## Further Reading <a id="1500"/>
 
+- [Zero-Wave-Device-Patent-Topic](1971093001.md)
 - [Zero-Wave-Theory-Topic](1971093000.md)
