--- a/23.md
+++ b/23.md
@@ -66,7 +66,7 @@
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
 #### Blog-Chain-Time 2023.10.16-19:45 in Tübingen <a id="12013"/>
-###### Topics: Zero-Wave-Device-Patent, TüDoKop, Woman
+###### Topics: Zero-Wave-Device-Patent, TüDoKop, Women
 
 On our regular [TüDoKop](2010026.md)-Round I report about [My-Patent](300050001.md) and my [Plan](600045.md) of using a [Block-Chain](300000000.md) to prevent [Stealing](670013.md) of the [Idea](600012.md).
 
