--- a/23.md
+++ b/23.md
@@ -68,13 +68,13 @@
 #### Blog-Chain-Time 2023.10.16-19:45 in Tübingen <a id="12013"/>
 ###### Topics: Zero-Wave-Device-Patent, TüDoKop, Women
 
-On our regular [TüDoKop](2010026.md)-Round I report about [My-Patent](300050001.md) and my [Plan](600045.md) of using a [Block-Chain](300000000.md) to prevent [Stealing](670013.md) of the [Idea](600012.md).
+On our regular [TüDoKop](2010026.md)-Round I report about [My-Patent](300050001.md) and the [Plan](600045.md) of using a [Block-Chain](300000000.md) to prevent Others from [Stealing](670013.md) the [Idea](600012.md).
 
-After my [Friends](180000010.md) give me the [Advice](600150.md) not to be so naive and better pay for a [Patent-Lawyer](202000021.md), I respond that [Konrad_Zuse](70000045.md) should have said [[3]](#12053), that these Humans are the only Ones, who earn [Money](6666.md) with [Patents](670022.md).
+After my [Friends](180000010.md) give me the [Advice](600150.md) to better pay for a [Patent-Lawyer](202000021.md), I respond that [Konrad_Zuse](70000045.md) once has said [[3]](#12053), that these are the only Ones, who would earn [Money](6666.md) with [Patents](670022.md).
 
-This might be true, but also [Mandy](151000001.md) teaches me a little bit later, that I have to be careful with sensitive Things:
+Although this might be true, perhaps I really should to be more careful with such sensitive Things, as also [A-little-Woman](151000001.md) taught me around one Hour later:
 
-![Thanks, little Girl!](400000138.jpg)
+![Sorry Mandy!](400000138.jpg)
 
 #### Blog-Chain-Time 2023.10.16-04:30 in Tübingen <a id="12012"/>
 ###### Topics: Zero-Wave-Device-Patent, Nicole
