--- a/23.md
+++ b/23.md
@@ -72,9 +72,9 @@ On our regular [TüDoKop](2010026.md)-Round I report about [My-Patent](300050001
 
 After my [Friends](180000010.md) give me the [Advice](600150.md) to better pay for a [Patent-Lawyer](202000021.md), I respond that [Konrad_Zuse](70000045.md) once has said [[3]](#12053), that these are the only Ones, who would earn [Money](6666.md) with [Patents](670022.md).
 
-Although this might be true, perhaps I really should to be more careful with such sensitive Things, as also [A-little-Woman](151000001.md) taught me around one Hour later:
+Although this might be true, perhaps I really should to be more careful with such sensitive Things, as also [My-little-Teacher](151000001.md) told me around one Hour later:
 
-![Sorry Mandy!](400000138.jpg)
+![Thanks Mandy!](400000138.jpg)
 
 #### Blog-Chain-Time 2023.10.16-04:30 in Tübingen <a id="12012"/>
 ###### Topics: Zero-Wave-Device-Patent, Nicole
