--- a/23.md
+++ b/23.md
@@ -72,7 +72,7 @@ On our regular [TüDoKop](2010026.md)-Round I report about [My-Patent](300050001
 
 After my [Friends](180000010.md) give me the [Advice](600150.md) to better pay for a [Patent-Lawyer](202000021.md), I respond that [Konrad_Zuse](70000045.md) once has said [[3]](#12053), that these are the only Ones, who would earn [Money](6666.md) with [Patents](670022.md).
 
-Although this might be true, perhaps I really should to be more careful with such sensitive Things, as also [My-little-Teacher](151000001.md) told me around one Hour later:
+Although this might be true, perhaps I really should to be more careful with such sensitive Things, as also [My-Little-Teacher](151000001.md) told me around one Hour later:
 
 ![Thanks Mandy!](400000138.jpg)
 
