--- a/23.md
+++ b/23.md
@@ -77,7 +77,7 @@ Although this might be true, perhaps I really should to be more careful with suc
 ![Thanks Mandy!](400000138.jpg)
 
 #### Blog-Chain-Time 2023.10.16-04:30 in Tübingen <a id="12012"/>
-###### Topics: Zero-Wave-Device-Patent, Nicole
+###### Topics: Zero-Wave-Device-Patent, Nicole, Women
 
 While working out the Description for my [Zero-Wave-Device-Patent](300050001.md), I define a lot of new [Concepts](600011.md) around the [Wave-Theory](10000094.md).
 
