--- a/23.md
+++ b/23.md
@@ -458,7 +458,7 @@ Perhaps this [Idea](600012.md) is good enough for him and we can win together ye
 
 [<a id="12050"/>0] [Beginnings of Zero-Wave-Theory](21.md#1804) \
 [<a id="12051"/>1] [Pythagorean-Comma](#10102) \
-[<a id="12052"/>2] [Electro-Magnetic-Transformation](21.md#1804)
+[<a id="12052"/>2] [Electro-Magnetic-Transformation](21.md#1804) \
 [<a id="12053"/>3] [https://youtu.be](https://youtu.be/jhasuoNy_Pk&t=2m4s)
 
 ## Day-109: The Don't-Waste-App <a id="10900"/>
