--- a/300050001.md
+++ b/300050001.md
@@ -18,6 +18,8 @@ While the Zero-Wave is created, the Energy of the two Partner-Waves is released:
 
 ![Released Energy](400000132.png)
 
+### Transformation <a id="1110"/>
+
 Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [Transformation](600164.md) of the released [Wave-Energy](10000080.md) is carried out into two possible Froms of Energy:
 
 - The [Wave-Energy](10000080.md) is transformed into [Thermal-Energy](10000070.md), where a [Measurement](10000022.md) is possible by Means of already known [Physics](10000000.md).
@@ -25,13 +27,17 @@ Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [
 
 In the former Case [Heating](10000072.md) is generated in [Our-Universe](10000074.md), in the Latter [Cooling](10000073.md) is the [Result](60033.md).
 
+### Communication <a id="1120"/>
+
 There is at least one accepted Case, where the [Energy-Convervation-Law](10000017.md) seems to be (at least temporarily) violated, namely [Quantum-Fluctuations](10000096.md). The [Zero-Wave-Theory](301000002.md) can explain this [Observation](10000036.md) by a third [Hypothesis](600028.md):
 
 - The [Wave-Energy](10000080.md) is tunneled into a [Parallel-Universe](10000075.md).
 
 If that Theory is correct, the [Zero-Wave-Device](20000021.md) can also be used for [Communication](60061.md) with [Parallel-Universes](10000075.md) and in case there live more developed [Living-Beings](40000016.md), who already developed such a Device, it might be worth to search for [Patterns](60112.md) in [Quantum-Fluctuations](10000096.md), that cannot be explained by simple [Stochastics](13005001.md).
 
-For the third Possibility [Cooling](10000073.md) will be generated in [Our-Universe](10000074.md) and in the [Parallel-Universes](10000075.md) most likely [Heating](10000072.md) will be generated.
+### Dark-Energy/Matter <a id="1130"/>
+
+It is already known, that [Energy](10000040.md) can be transformed into [Matter](10000034.md) and vica versa, so also for the [Zero-Wave-Energy](10000071.md) there must exist a corresponding [Zero-Particle](10000061.md), where Both might be just other [Names](60048.md) for [Dark-Energy](10000097.md) and [Dark-Matter](10000098.md).
 
 ## Invention <a id="1200"/>
 
