--- a/300050001.md
+++ b/300050001.md
@@ -80,6 +80,7 @@ For this Invention all Kind of Waves can be used, for Example:
 - [Sound-Waves](40200001.md)
 - [Water-Waves](10000084.md)
 - [Wind-Waves](10000083.md)
+- [Gravity-Waves](10000099.md)
 
 ## Use-Cases <a id="1400"/>
 
