--- a/300050001.md
+++ b/300050001.md
@@ -84,17 +84,17 @@ For this Invention all Kind of Waves can be used, for Example:
 
 ## Use-Cases <a id="1400"/>
 
-### Main Use-Case <a id="1410"/>
+### Heat or Cool <a id="1410"/>
 
 The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heating](10000072.md) or [Cooling](10000073.md).
 
-### Other Benefits <a id="1420"/>
+### Improve Environment <a id="1420"/>
 
 - Reduce [Noise-Pollution](290000001.md) with [Anti-Sound](10000066.md).
 - Reduce [Light-Pollution](290000003.md) with [Anti-Light](10000087.md).
 - Solve the [Global-Warming](290000002.md) Problem.
 
-### Further Use-Cases <a id="1430"/>
+### Communicate <a id="1430"/>
 
 - Establish [Communication](60061.md) with [Parallel-Universes](10000075.md).
 
