--- a/300050001.md
+++ b/300050001.md
@@ -88,15 +88,19 @@ For this Invention all Kind of Waves can be used, for Example:
 
 The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heating](10000072.md) or [Cooling](10000073.md).
 
-### Improve Environment <a id="1420"/>
+### Improve our Environment <a id="1420"/>
 
 - Reduce [Noise-Pollution](290000001.md) with [Anti-Sound](10000066.md).
 - Reduce [Light-Pollution](290000003.md) with [Anti-Light](10000087.md).
 - Solve the [Global-Warming](290000002.md) Problem.
 
-### Communicate <a id="1430"/>
+### Communicate with Universes <a id="1430"/>
 
 - Establish [Communication](60061.md) with [Parallel-Universes](10000075.md).
+
+### Influence Universe-Expansion <a id="1440"/>
+
+If it turns out, that [Zero-Energy](10000061.md)/[Zero-Particles](10000061.md) are indeed [Dark-Energy](10000097.md)/[Dark-Matter](10000098.md), it might be possible to influence the Expansion of [Our-Universe](10000074.md), by generating [Zero-Energy](10000061.md)/[Zero-Particles](10000061.md).
 
 ## Further Reading <a id="1500"/>
 
