Introduce Basic-Modes

--- a/300050001.md
+++ b/300050001.md
@@ -41,11 +41,14 @@ It is already known, that [Energy](10000040.md) can be transformed into [Matter]
 
 ## Invention <a id="1200"/>
 
-The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Pro-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have four different Modes:
+The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating [Pro-Waves](10000082.md) and [Anti-Waves](10000081.md), but also already existing [Environment-Waves](301000003.md) can be used, therefore in total we have three different Basic-Modes:
 
 - Stand-Alone-Mode
 - Add-On-Mode
 - Modulation-Mode
+
+Using one of the three Basic-Modes there is also a special Mode for Communication with Parallel-Universes:
+
 - Communication-Mode
 
 ### Stand-Alone-Mode <a id="1201"/>
