Add already known Inventions

--- a/300050001.md
+++ b/300050001.md
@@ -105,6 +105,11 @@ The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 
 If it turns out, that [Zero-Energy](10000061.md)/[Zero-Particles](10000061.md) are indeed [Dark-Energy](10000097.md)/[Dark-Matter](10000098.md), it might be possible to influence the Expansion of [Our-Universe](10000074.md), by generating [Zero-Energy](10000061.md)/[Zero-Particles](10000061.md).
 
+## Already known Inventions <a id="1600"/>
+
+- [Noise-Cancellation](10000067.md)
+- [Healy-Device?](1000002.md)
+
 ## Further Reading <a id="1500"/>
 
 - [Zero-Wave-Device-Patent-Topic](1971093001.md)
