--- a/300050001.md
+++ b/300050001.md
@@ -79,11 +79,11 @@ For [Communication](60061.md) with [Parallel-Universes](10000075.md) the Device 
 
 For this Invention all Kind of Waves can be used, for Example:
 
-- [Light-Waves](10000012.md)
-- [Sound-Waves](40200001.md)
-- [Water-Waves](10000084.md)
-- [Wind-Waves](10000083.md)
-- [Gravity-Waves](10000099.md)
+- [Light](10000012.md)
+- [Sound](40200001.md)
+- [Water](10000084.md)
+- [Wind](10000083.md)
+- [Gravity](10000099.md)
 
 ## Use-Cases <a id="1400"/>
 
