Use correct Articulus

--- a/640006.md
+++ b/640006.md
@@ -1,3 +1,3 @@
 # Friedrich-Alexander-Universität-Erlangen-Nürnberg
 
-The Friedrich-Alexander-Universität-Erlangen-Nürnberg is an [University](640005.md) in [Germany](140000025.md).
+The Friedrich-Alexander-Universität-Erlangen-Nürnberg is a [University](640005.md) in [Germany](140000025.md).
