--- a/300050001.md
+++ b/300050001.md
@@ -27,7 +27,7 @@ Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [
 
 In the former Case [Heating](10000072.md) is generated in [Our-Universe](10000074.md), in the Latter [Cooling](10000073.md) is the [Result](60033.md).
 
-### Communication <a id="1120"/>
+### Quantum-Fluctuations <a id="1120"/>
 
 There is at least one accepted Case, where the [Energy-Convervation-Law](10000017.md) seems to be (at least temporarily) violated, namely [Quantum-Fluctuations](10000096.md). The [Zero-Wave-Theory](301000002.md) can explain this [Observation](10000036.md) by a third [Hypothesis](600028.md):
 
