Add Power-Supply by Environment-Waves

--- a/300050001.md
+++ b/300050001.md
@@ -18,7 +18,7 @@ While the Zero-Wave is created, the Energy of the two Partner-Waves is released:
 
 ![Released Energy](400000132.png)
 
-### Transformation <a id="1110"/>
+### Zero-Energy <a id="1110"/>
 
 Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [Transformation](600164.md) of the released [Wave-Energy](10000080.md) is carried out into two possible Froms of Energy:
 
@@ -50,6 +50,8 @@ The [Zero-Wave-Device](20000021.md) has the [Ability](600103.md) for generating 
 Using one of the three Basic-Modes there is also a special Mode for Communication with Parallel-Universes:
 
 - Communication-Mode
+
+Depending on the used Mode, the Device can be powerd by the [Engergy](10000009.md) of already existing [Environment-Waves](301000003.md).
 
 ### Stand-Alone-Mode <a id="1201"/>
 
