--- a/300050001.md
+++ b/300050001.md
@@ -20,7 +20,7 @@ While the Zero-Wave is created, the Energy of the two Partner-Waves is released:
 
 ### Zero-Energy <a id="1110"/>
 
-Depending on [The-Truth](600140.md) of the [Zero-Wave-Theory](301000002.md), a [Transformation](600164.md) of the released [Wave-Energy](10000080.md) is carried out into two possible Froms of Energy:
+Depending on [The-Truth](600140.md) about the [Zero-Wave-Theory](301000002.md), a [Transformation](600164.md) of the released [Wave-Energy](10000080.md) is carried out into two possible Froms of Energy:
 
 - The [Wave-Energy](10000080.md) is transformed into [Thermal-Energy](10000070.md), where a [Measurement](10000022.md) is possible by Means of already known [Physics](10000000.md).
 - The [Wave-Energy](10000080.md) is transformed into [Zero-Energy](10000071.md), where [Invention](60124.md) is required for [Measurement](10000022.md) of this [New-Thing](60131.md).
