--- a/10000074.md
+++ b/10000074.md
@@ -1,3 +1,3 @@
 # Our-Universe
 
-Our-Universe is a [Space-Time-Continuum](10000027.md).
+Our-Universe is a [Universe](10000027.md), that is the [Opposite](60103.md) of a [Parallel-Universe](10000075.md).
