--- a/300050001.md
+++ b/300050001.md
@@ -51,7 +51,7 @@ Using one of the three Basic-Modes there is also a special Mode for Communicatio
 
 - Communication-Mode
 
-Depending on the used Mode, the Device can be powerd by the [Energy](10000009.md) of already existing [Environment-Waves](301000003.md).
+Depending on the used Mode, the Device can be powered by the [Energy](10000009.md) of already existing [Environment-Waves](301000003.md).
 
 ### Stand-Alone-Mode <a id="1201"/>
 
