--- a/300050001.md
+++ b/300050001.md
@@ -97,7 +97,7 @@ The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heati
 
 - Reduce [Noise-Pollution](290000001.md) with [Anti-Sound](10000066.md).
 - Reduce [Light-Pollution](290000003.md) with [Anti-Light](10000087.md).
-- Solve the [Global-Warming](290000002.md) Problem.
+- Solve [Global-Warming](290000002.md) Problems.
 
 ### Contact Universes <a id="1430"/>
 
