--- a/10000100.md
+++ b/10000100.md
@@ -1,3 +1,3 @@
 # Infra-Sound-Wave
 
-An Infra-Sound-Wave is a [Sound-Wave](40200001.md) with an [Frequency](10000016.md) lower than 20 [Hz](404.md).
+An Infra-Sound-Wave is a [Sound-Wave](40200001.md) with an [Frequency](10000016.md) lower than 20 [Hz](10000101.md).
