Add more Information

--- a/300050001.md
+++ b/300050001.md
@@ -10,7 +10,7 @@ This Patent describes the [Zero-Wave-Device](20000021.md), that is able to gener
 
 ## Theory <a id="1100"/>
 
-When two [Waves](60156.md) with 180 Degree [Phase-Shift](10000079.md) create a [Superposition](10000065.md), the [Result](60033.md) is a [Zero-Wave](10000061.md):
+When two [Waves](60156.md) with same [Amplitude](10000015.md) and [Frequency](10000016.md) but with 180 Degree [Phase-Shift](10000079.md) create a [Superposition](10000065.md), the [Result](60033.md) is a [Zero-Wave](10000061.md):
 
 ![Zero-Wave](400000130.png)
 
