--- a/290000003.md
+++ b/290000003.md
@@ -1,3 +1,3 @@
 # Light-Pollution
 
-Light-Pollution is [Environment-Pollution](290000000.md) with [Light](10000012.md).
+Light-Pollution is [E-Smog](290000004.md) with [Light](10000012.md).
