--- a/300050001.md
+++ b/300050001.md
@@ -93,7 +93,7 @@ For this Invention all Kind of Waves can be used, for Example:
 
 The main [Use-Case](600170.md) for the [Zero-Wave-Device](20000021.md) is [Heating](10000072.md) or [Cooling](10000073.md).
 
-### Improve Environment <a id="1420"/>
+### Reduce Pollution <a id="1420"/>
 
 - Reduce [Noise-Pollution](290000001.md) with [Anti-Sound](10000066.md).
 - Reduce [Light-Pollution](290000003.md) with [Anti-Light](10000087.md).
