--- a/10000081.md
+++ b/10000081.md
@@ -1,3 +1,3 @@
 # Anti-Wave
 
-An Anti-Wave is a [Wave](60156.md), that has 180 Degree [Phase-Shift](10000079.md) to an [Pro-Wave](10000082.md).
+An Anti-Wave is a [Wave](60156.md), that has the same [Amplitude](10000015.md) and [Frequency](10000016.md) but 180 Degree [Phase-Shift](10000079.md) to an [Pro-Wave](10000082.md).
