--- a/200000010.md
+++ b/200000010.md
@@ -1,3 +1,3 @@
 # Drink-Provider
 
-A Drink-Provider is [Provider](600086.md) for [Drinks](404.md)
+A Drink-Provider is [Provider](600086.md) for [Drinks](203000000.md)
