--- a/60054.md
+++ b/60054.md
@@ -1,3 +1,3 @@
 # Directed-Relation
 
-A Directed-Relation is a [Relation](60005.md) where the [Meaning](60002.md) is different for the [First-Relation-Thing]() and the [Second-Relation-Thing](). 
+A Directed-Relation is a [Relation](60005.md) where the [Meaning](60002.md) is different for the [First-Relation-Thing](60090.md) and the [Second-Relation-Thing](60091.md).
