--- a/600171.md
+++ b/600171.md
@@ -1,3 +1,3 @@
 # Reflection
 
-reflection is [Modification](600164.md) of [Direction](404.md).
+Reflection is [Modification](600164.md) of [Direction](404.md).
