--- a/20010001.md
+++ b/20010001.md
@@ -1,3 +1,3 @@
-# Deflector
+# Reflector
 
-A Deflector is a [Tool](600043.md) for [Deflection](404.md).
+A Reflector is a [Tool](600043.md) for [Reflection](404.md).
