--- a/23.md
+++ b/23.md
@@ -591,7 +591,7 @@ So from now on the Counter is always increased by one, regardless of how long ag
 #### Blog-Chain-Time 2023.07.16-20:29 in Tübingen <a id="10501"/>
 ###### Topics: Music, Physics
 
-Several Days ago I re-started my Singing-Lessions with a new (this Time female) Teacher. Because I told her that I would like to sing at Site, we first covered the Topic [Solmization](90000026.md), where the [Musical-Notes](90000017.md) are assigned to the following eight [Syllables](640046.md):
+Several Days ago I re-started my Singing-Lessions with my [New-Singing-Teacher](1971091167.md), this Time it is a [Woman](40000010.md). Because I told her that I would like to sing at Site, we first covered the Topic [Solmization](90000026.md), where the [Musical-Notes](90000017.md) are assigned to the following eight [Syllables](640046.md):
 
 ```
 Do Re Mi Fa Sol La Ti Do
