--- a/23.md
+++ b/23.md
@@ -65,6 +65,15 @@
 
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
+#### Blog-Chain-Time 2023.10.20-20:50 at the Piccolo-Sole-d'Oro <a id="12014"/>
+###### Topics: Zero-Wave-Theory, Music, Women
+
+Because of Traffic, I come a little late to the [Gig](60081.md) of [My-Singing-Teacher](1971091167.md) at the [Piccolo-Sole-d'Oro](2010033.md) and almost as planned at the Entrance, I meet [My-Artist-Friend](1971091155.md).
+
+But as really planned, I am pleased to see [My-Choir-Friend](1971091160.md) again and together we sing with the Todays Performer the second last Song.
+
+It was a nice Evening 
+
 #### Blog-Chain-Time 2023.10.16-19:45 in Tübingen <a id="12013"/>
 ###### Topics: Zero-Wave-Device-Patent, TüDoKop, Women
 
