--- a/23.md
+++ b/23.md
@@ -66,13 +66,17 @@
 ## Day-112: Theory vs. Reality <a id="12000"/>
 
 #### Blog-Chain-Time 2023.10.20-20:50 at the Piccolo-Sole-d'Oro <a id="12014"/>
-###### Topics: Zero-Wave-Theory, Music, Women
+###### Topics: Music, Women
 
-Because of Traffic, I come a little late to the [Gig](60081.md) of [My-Singing-Teacher](1971091167.md) at the [Piccolo-Sole-d'Oro](2010033.md) and almost as planned at the Entrance, I meet [My-Artist-Friend](1971091155.md).
+Because of a lot of Traffic, I arrive a little bit late at the [Piccolo](2010033.md), where currently the [Gig](60081.md) of [My-Singing-Teacher](1971091167.md) takes Place and almost as planned, already at the Entrance I meet [My-Artist-Friend](1971091155.md) - Sometimes I *really* wonder, if such [Coincidences](99.md) in [Theory](7000001.md) are [Synchronisities](60161.md) in [Reality](40000.md).
 
-But as really planned, I am pleased to see [My-Choir-Friend](1971091160.md) again and together we sing with the Todays Performer the second last Song.
+But as *really* planned, I am also pleased to see [My-Alt-Choir-Friend](1971091160.md) again, with whom (as is known) I worked a lot on the [Theory](7000001.md) of our [Pythagorean-Comma](90000013.md).
 
-It was a nice Evening 
+We sing together with our [Voice-Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
+
+Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) and of course the most Beautiful goes to our Singing-Sax:
+
+![Thanks, Odilia!](400000140.jpg)
 
 #### Blog-Chain-Time 2023.10.16-19:45 in Tübingen <a id="12013"/>
 ###### Topics: Zero-Wave-Device-Patent, TüDoKop, Women
