--- a/23.md
+++ b/23.md
@@ -70,11 +70,11 @@
 
 Because of a lot of Traffic, I arrive a little bit late at the [Piccolo](2010033.md), where currently the [Gig](60081.md) of [My-Singing-Teacher](1971091167.md) takes Place and almost as planned, already at the Entrance I meet [My-Artist-Friend](1971091155.md) - Sometimes I *really* wonder, if such [Coincidences](99.md) in [Theory](7000001.md) are [Synchronisities](60161.md) in [Reality](40000.md).
 
-But as *really* planned, I am also pleased to see [My-Alt-Choir-Friend](1971091160.md) again, with whom (as is known) I worked a lot on the [Theory](7000001.md) of our [Pythagorean-Comma](90000013.md).
+But as *really* planned, I am also pleased to see [My-Alt-Choir-Friend](1971091160.md) and her [Friend](180000002.md) - As is known, with the Former I already worked a lot on the [Theory](7000001.md) of our [Pythagorean-Comma](90000013.md).
 
-We sing together with our [Voice-Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
+We sing together with our [Voice-Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - Which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
 
-Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) and of course the most Beautiful goes to our Singing-Sax:
+Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) - Of course the most beautiful One goes to our Singing-Sax:
 
 ![Thanks, Odilia!](400000140.jpg)
 
