--- a/23.md
+++ b/23.md
@@ -74,7 +74,7 @@ But as *really* planned, I am also pleased to see [My-Alt-Choir-Friend](19710911
 
 We sing together with our [Voice-Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - Which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
 
-Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) - Of course the most beautiful One goes to our Singing-Sax:
+Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) - Of course the most beautiful One goes to our great Singing-Sax:
 
 ![Thanks, Odilia!](400000140.jpg)
 
