--- a/23.md
+++ b/23.md
@@ -76,7 +76,7 @@ We sing together with our [Voice-Coach](202000023.md) the second [Encore](600172
 
 Because it was a *really* nice Conclusion for my Day, I thankfully buy from [our](150000007.md) mobile [Florist](202000022.md) three nice [Roses](260020004.md) for three *really* nice [Women](40000010.md), who fortunately *really* like [Flowers](260020000.md) and of course the most beautiful One goes to our great [Singing-Sax](1971091167.md):
 
-![Thanks, Odilia!](400000140.jpg)
+![Well done, Odilia!](400000140.jpg)
 
 #### Blog-Chain-Time 2023.10.17-19:45 in Tübingen <a id="12013"/>
 ###### Topics: Zero-Wave-Device-Patent, TüDoKop, Women
