--- a/23.md
+++ b/23.md
@@ -70,7 +70,7 @@
 
 Because of a lot of Traffic, I arrive a little bit late at the [Piccolo](2010033.md), where currently the [Gig](60081.md) of [My-Singing-Teacher](1971091167.md) takes Place and almost as planned, already at the Entrance I meet [My-Artist-Friend](1971091155.md) - Sometimes I *really* wonder, if such [Coincidences](99.md) in [Theory](7000001.md) are [Synchronisities](60161.md) in [Reality](40000.md).
 
-But as *really* planned, I am also pleased to see [My-Alt-Choir-Buddy](1971091160.md) and her [Friend](180000002.md) - As is known, with the Former I already worked a lot on the [Theory](7000001.md) of our [Pythagorean-Comma](90000013.md).
+But as *really* planned, I am also pleased to see [My-Alt-Choir-Buddy](1971091160.md) and her [Friend](180000002.md) - As is known, with the Former I already worked a lot on the [Theory](7000001.md) of our [Pythagorean-Topic](1971093002.md).
 
 We sing together with our [Voice-Coach](202000023.md) the second [Encore](600172.md) and the very last [Addition](600172.md) is then a Solo-Performance again, where at one Point I *really* got the Impression, that the [Voice](60096.md) of my female Teacher almost sounds like a [Saxophon](90000042.md) - Which cannot be [The-Truth](600140.md) of course in [Reality](40000.md).
 
